--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,8 @@ requests==2.31.0
 sqlalchemy==2.0.30
 Werkzeug==3.0.3
 portalocker==2.8.2
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.5.1
+statsmodels==0.14.2
+ruptures==1.1.9
