--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ influxdb-client==1.43.0
 jinja2==3.1.4
 openai==1.30.1
 Pillow==10.3.0
+psycopg2==2.9.9
 pydantic==2.7.1
 python-decouple==3.8
 pyyaml==6.0.1
