Added simple browser test and yaml file for github action

--- a/docker-compose.extra.yml
+++ b/docker-compose.extra.yml
@@ -16,6 +16,8 @@ services:
       - DOCKER_INFLUXDB_INIT_BUCKET=jmeter
       - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=DqwGq5e7Avv9gKYi2NtRtRenOxbvEqXMtg-r4WjNxYlerHMfikeLtCTJwSTzk-5NheVXTOFi0qug5jRGuh8-mw==
       - DOCKER_INFLUXDB_INIT_RETENTION=180d
+    networks:
+      - perforge-net
     restart: always
 
   grafana:
@@ -31,12 +33,17 @@ services:
     volumes:
       - grafana-home:/var/lib/grafana/
       - grafana-conf:/etc/grafana/
+    networks:
+      - perforge-net
     restart: always
 
   renderer:
     image: grafana/grafana-image-renderer:latest
+    container_name: renderer
     ports:
       - 8081
+    networks:
+      - perforge-net
     restart: always
 
 volumes:
@@ -44,3 +51,7 @@ volumes:
   influxdb-config:
   grafana-home:
   grafana-conf:
+
+networks:
+  perforge-net:
+    external: true
