--- a/.github/workflows/browser_tests.yml
+++ b/.github/workflows/browser_tests.yml
@@ -26,14 +26,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Check Docker Compose Version
+        run: docker compose version
+
       - name: Create External Network
         run: docker network create perforge-net || true
 
       - name: Build and Run Application Services
-        run: docker-compose -f docker-compose.test.yml up -d --build
+        run: docker compose -f docker-compose.test.yml up -d --build
 
       - name: Build and Run Integration Services
-        run: docker-compose -f docker-compose.extra.yml up -d
+        run: docker compose -f docker-compose.extra.yml up -d
 
       - name: Wait for Services to be Ready
         run: |
