Added test influxdb database and added to auto test pipeline

--- a/.github/workflows/browser-tests.yml
+++ b/.github/workflows/browser-tests.yml
@@ -10,6 +10,7 @@ jobs:
 
     env:
       BASE_URL: http://localhost:7878
+      INFLUXDB_TOKEN: DqwGq5e7Avv9gKYi2NtRtRenOxbvEqXMtg-r4WjNxYlerHMfikeLtCTJwSTzk-5NheVXTOFi0qug5jRGuh8-mw==
 
     steps:
       - name: Checkout Repository
@@ -60,10 +61,29 @@ jobs:
             sleep 5
           done
 
-          if ! curl -s http://localhost:7878/health; then
+          if ! curl -s http://localhost:7878; then
             echo "Perforge service did not start in time."
             exit 1
           fi
+
+      - name: Restore InfluxDB Test Data Set
+      - run: |
+          # Copy the test data into the influxdb container
+          docker cp ./browser_tests/test_data/test_influxdb.lp influxdb:/tmp/test_influxdb.lp
+          
+          # Create org and bucket (if they don't exist)
+          docker exec influxdb influx org list -t $INFLUXDB_TOKEN | grep -q perforge || \ 
+          docker exec influxdb influx org create -n perforge -t $INFLUXDB_TOKEN
+
+          docker exec influxdb influx bucket list -t $INFLUXDB_TOKEN --org perforge | grep -q jmeter || \
+          docker exec influxdb influx bucket create -n jmeter --org perforge -t $INFLUXDB_TOKEN
+
+          # Import data into InfluxDB
+          docker exec influxdb influx write \
+            --bucket jmeter \
+            --file /tmp/test_influxdb.lp \
+            --org perforge \
+            --token $INFLUXDB_TOKEN
 
       - name: Run Playwright Tests
         run: npx playwright test
