--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,9 @@ flask_mail==0.9.1
 flask_migrate==4.0.7
 flask_sqlalchemy==3.1.1
 flask_wtf==1.2.1
-google-generativeai==0.5.4
 gunicorn==22.0.0
 influxdb-client==1.43.0
 jinja2==3.1.4
-openai==1.30.1
 Pillow==10.3.0
 psycopg2==2.9.9
 pydantic==2.7.1
@@ -29,3 +27,11 @@ statsmodels==0.14.2
 ruptures==1.1.9
 Flask-Compress==1.15
 matplotlib==3.10.0
+langchain-google-genai==2.0.11
+langchain==0.3.20
+langchain_core==0.3.41
+langchain_openai==0.3.7
+
+# DEPRECTAED
+google-generativeai==0.5.4
+openai==1.30.1
